tests/ocp/1-003_verify_hostname_with_route/01-argocd-route.yaml
apiVersion: argoproj.io/v1alpha1
kind: ArgoCD
metadata:
  name: example-argocd
  labels:
    example: example-argocd
spec:
  server:
    host: test-crane.apps.rh-4.12-111111.dev.openshift.org
    route:
      enabled: true
