tests/ocp/1-003_verify_hostname_with_route/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: 1-003-verify-hostname-with-route
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: 01-argocd-route.yaml
    - assert:
        file: 01-assert.yaml
